--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="flex justify-end">
                         <div class="relative w-full max-w-[280px]">
                             <div class="aspect-[3/4] rounded-3xl overflow-hidden grayscale-[30%] hover:grayscale-0 transition-all duration-1000">
-                                <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover" alt="Broker">
+                                <img src="https://timyang2048.github.io/personal.png" class="w-full h-full object-cover" alt="Broker">
                             </div>
                             <div class="mt-8 text-right">
                                 <p class="text-stone-900 font-black text-xl italic tracking-tighter">Professional Excellence</p>
