--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN" class="scroll-smooth">
 <head>
@@ -40,7 +39,7 @@
             <div class="max-w-6xl mx-auto px-8 w-full">
                 <div class="grid lg:grid-cols-2 gap-20 items-center">
                     <div>
-                        <p class="text-orange-800 font-bold tracking-[0.2em] text-xs uppercase mb-6 italic">20 Years of Professional Trust</p>
+                        <p class="text-orange-800 font-bold tracking-[0.2em] text-xs uppercase mb-6 italic">20年保险专业经验，值得信赖</p>
                         <h1 class="text-5xl lg:text-6xl font-black mb-10 leading-tight">
                             在安大略省，<br>为您提供专业保险建议和方案
                         </h1>
@@ -63,14 +62,15 @@
                         </div>
                     </div>
                     
-                    <div class="flex justify-end">
+                    <!-- CENTERED PHOTO AREA -->
+                    <div class="flex justify-center">
                         <div class="relative w-full max-w-[280px]">
                             <div class="aspect-[3/4] rounded-3xl overflow-hidden grayscale-[30%] hover:grayscale-0 transition-all duration-1000">
                                 <img src="https://timyang2048.github.io/personal.png" class="w-full h-full object-cover" alt="Broker">
                             </div>
-                            <div class="mt-8 text-right">
-                                <p class="text-stone-900 font-black text-xl italic tracking-tighter">Professional Excellence</p>
-                                <p class="text-stone-400 text-[10px] uppercase tracking-widest mt-1">Ontario RIBO Licensed</p>
+                            <div class="mt-8 text-center">
+                                <p class="text-stone-900 font-black text-xl italic tracking-tighter">专业 ｜ 资深 ｜ 高效</p>
+                                <p class="text-stone-400 text-[10px] uppercase tracking-widest mt-1">安大略省持牌保险经纪</p>
                             </div>
                         </div>
                     </div>
