--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>安省资深保险经纪 | 20年经验 | 三语服务</title>
+    <title>安省资深保险经纪|20年经验|中文服务</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,10 +41,10 @@
                     <div>
                         <p class="text-orange-800 font-bold tracking-[0.2em] text-xs uppercase mb-6 italic">20年保险专业经验，值得信赖</p>
                         <h1 class="text-5xl lg:text-6xl font-black mb-10 leading-tight">
-                            在安大略省，<br>为您提供专业保险建议和方案
+                            在安大略省，<br>为您提供中文专业保险建议和方案
                         </h1>
                         <p class="text-lg text-stone-500 mb-12 leading-relaxed max-w-md">
-                            资深专业保险经纪，精通中、英、粤三语。背靠全国性保险网络，对比 30 余家承保市场，为您提供最具性价比的专业方案。
+                            资深专业保险经纪，精通普通话、英语、粤语三语。背靠全国性保险网络，对比 30 余家承保市场，为您提供最具性价比的专业方案。
                         </p>
                         
                         <!-- ENLARGED QR CODE ON HOME -->
