Update title and add meta description in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>安省资深保险经纪|20年经验|中文服务</title>
+    <title>Tim Yang|安省持牌中文保险经纪|奥克维尔GTA地区</title>
+    <meta name="description" content="
+        Tim Yang，安省持牌保险经纪，服务 Oakville / GTA。
+        提供中文车险、房屋保险、商业保险咨询。
+    ">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
