Update title and phone number format in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tim Yang|安省持牌中文保险经纪|奥克维尔GTA地区</title>
+    <title>Tim Yang | Oakville 中文车险房屋保险经纪 | Ontario Licensed Broker</title>
     <meta name="description" content="
         Tim Yang，安省持牌保险经纪，服务 Oakville / GTA。
         提供中文车险、房屋保险、商业保险咨询。
@@ -12,27 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body { 
-            font-family: 'Inter', 'Noto Sans SC', sans-serif; 
-            background-color: #fafaf9; /* Stone 50 */
-            color: #44403c; /* Stone 700 */
-        }
-        h1, h2, h3 { 
-            font-family: 'Noto Serif SC', serif; 
-            color: #1c1917; /* Stone 900 */
-        }
-        section { 
-            min-height: auto; 
-            padding-top: 5rem;
-            padding-bottom: 5rem;
-        }
-        .hero-section {
-            min-height: 80vh;
-            display: flex;
-            align-items: center;
-        }
-    </style>
+
 </head>
 <body class="selection:bg-orange-100 selection:text-orange-900">
 
@@ -179,7 +159,7 @@
                         <div class="text-center space-y-4">
                             <div class="h-px w-12 bg-stone-200 mx-auto my-6"></div>
                             <p class="text-sm font-bold text-stone-400 uppercase tracking-[0.3em]">Mobile</p>
-                            <p class="text-2xl font-black text-stone-900">+1 (416) 647-612-6296</p>
+                            <p class="text-2xl font-black text-stone-900">+1 647-612-6296</p>
                         </div>
                     </div>
                 </div>
