--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
                     <div>
                         <p class="text-orange-800 font-bold tracking-[0.2em] text-xs uppercase mb-6 italic">20年保险专业经验，值得信赖</p>
                         <h1 class="text-5xl lg:text-6xl font-black mb-10 leading-tight">
-                            在安大略省，<br>为您提供中文专业保险建议和方案
+                            在安大略省奥克维尔Oakville，<br>为您提供中文专业保险建议和方案
                         </h1>
                         <p class="text-lg text-stone-500 mb-12 leading-relaxed max-w-md">
-                            资深专业保险经纪，精通普通话、英语、粤语三语。背靠全国性保险网络，对比 30 余家承保市场，为您提供最具性价比的专业方案。
+                            我是Tim Yang, 资深专业保险经纪，服务于GTA及奥克维尔地区，精通普通话、英语、粤语三语。背靠全国性保险网络，对比30余家承保市场，为您提供最具性价比的专业方案。
                         </p>
+                        <ul>
+                          <li>安大略省持牌保险经纪（RIBO Licensed）</li>
+                          <li>服务地区：Oakville / Mississauga / GTA</li>
+                          <li>服务语言：中文（普通话）/ English</li>
+                          <li>主要产品：汽车保险、房屋保险、商业保险</li>
+                        </ul>
                         
                         <!-- ENLARGED QR CODE ON HOME -->
                         <div class="flex items-start gap-8 bg-white p-8 rounded-3xl border border-stone-100 shadow-sm">
