--- a/index.html
+++ b/index.html
@@ -59,21 +59,6 @@
                         </div>
                     </div>
                 </div>
-                
-                <div class="mt-24 pt-12 border-t border-stone-200 grid grid-cols-3 gap-12">
-                    <div>
-                        <p class="text-xs font-bold text-stone-400 uppercase tracking-widest mb-2">Experience</p>
-                        <p class="text-xl font-bold text-stone-900">20年 行业积淀</p>
-                    </div>
-                    <div>
-                        <p class="text-xs font-bold text-stone-400 uppercase tracking-widest mb-2">Network</p>
-                        <p class="text-xl font-bold text-stone-900">30+ 承保市场</p>
-                    </div>
-                    <div>
-                        <p class="text-xs font-bold text-stone-400 uppercase tracking-widest mb-2">Language</p>
-                        <p class="text-xl font-bold text-stone-900">中/英/粤 专业服务</p>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -102,7 +87,7 @@
                     </div>
                     <div class="border-l border-stone-200 pl-10">
                         <span class="text-[10px] font-bold text-stone-400 uppercase tracking-widest mb-4 block">03 / Venture</span>
-                        <h3 class="text-2xl font-bold text-stone-900 mb-4">商业保险 (Business)</h3>
+                        <h3 class="text-2xl font-bold text-stone-900 mb-4">商业保险 (Commercial)</h3>
                         <p class="text-stone-500 leading-relaxed">
                             协助餐饮、零售、物流及各类专业事务所规避法律及经营风险。提供责任险、资产险及职业责任保障。
                         </p>
