Fix phone number formatting in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <p class="text-sm font-bold text-stone-900 mb-2">微信扫码即刻咨询</p>
                                 <p class="text-xs text-stone-400 leading-relaxed">获取免费保费价格</p>
                                 <div class="mt-6 text-orange-800 font-bold text-sm tracking-tight">
-                                    +1 (416) 647-612-6296
+                                    +1 (647)612-6296
                                 </div>
                             </div>
                         </div>
@@ -66,6 +66,7 @@
         <section id="services">
             <div class="max-w-6xl mx-auto px-8">
                 <div class="text-center mb-24">
+                    <div style="height: 3em;"></div>
                     <h2 class="text-4xl font-black text-stone-900 mb-6">保险服务范畴</h2>
                     <div class="w-12 h-0.5 bg-orange-800 mx-auto"></div>
                 </div>
