--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
+    <style>
+        body { 
+            font-family: 'Inter', 'Noto Sans SC', sans-serif; 
+            background-color: #fafaf9; /* Stone 50 */
+            color: #44403c; /* Stone 700 */
+        }
+        h1, h2, h3 { 
+            font-family: 'Noto Serif SC', serif; 
+            color: #1c1917; /* Stone 900 */
+        }
+        section { 
+            min-height: auto; 
+            padding-top: 5rem;
+            padding-bottom: 5rem;
+        }
+        .hero-section {
+            min-height: 80vh;
+            display: flex;
+            align-items: center;
+        }
+    </style>
 </head>
 <body class="selection:bg-orange-100 selection:text-orange-900">
 
