Remove inline styles and add line breaks in headings

--- a/index.html
+++ b/index.html
@@ -12,27 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body { 
-            font-family: 'Inter', 'Noto Sans SC', sans-serif; 
-            background-color: #fafaf9; /* Stone 50 */
-            color: #44403c; /* Stone 700 */
-        }
-        h1, h2, h3 { 
-            font-family: 'Noto Serif SC', serif; 
-            color: #1c1917; /* Stone 900 */
-        }
-        section { 
-            min-height: auto; 
-            padding-top: 5rem;
-            padding-bottom: 5rem;
-        }
-        .hero-section {
-            min-height: 80vh;
-            display: flex;
-            align-items: center;
-        }
-    </style>
+
 </head>
 <body class="selection:bg-orange-100 selection:text-orange-900">
 
@@ -45,7 +25,7 @@
                     <div>
                         <p class="text-orange-800 font-bold tracking-[0.2em] text-xs uppercase mb-6 italic">20年保险专业经验，值得信赖</p>
                         <h1 class="text-5xl lg:text-6xl font-black mb-10 leading-tight">
-                            在安大略省奥克维尔Oakville，<br>为您提供中文专业保险建议和方案
+                            在安省奥克维尔Oakville，<br>为您提供中文专业保险建议和方案
                         </h1>
                         <p class="text-lg text-stone-500 mb-12 leading-relaxed max-w-md">
                             我是Tim Yang, 资深专业保险经纪，服务于GTA及奥克维尔地区，精通普通话、英语、粤语三语。背靠全国性保险网络，对比30余家承保市场，为您提供最具性价比的专业方案。
@@ -87,7 +67,7 @@
             <div style="height: 3em;"></div>
             <div class="max-w-6xl mx-auto px-8">
                 <div class="text-center mb-24">
-                    <h2 class="text-4xl font-black text-stone-900 mb-6">保险服务范畴</h2>
+                    <h2 class="text-4xl font-black text-stone-900 mb-6"><br>保险服务范畴</h2>
                     <div class="w-12 h-0.5 bg-orange-800 mx-auto"></div>
                 </div>
 
@@ -129,7 +109,7 @@
             <div class="max-w-6xl mx-auto px-8">
                 <div class="grid lg:grid-cols-2 gap-24">
                     <div>
-                        <h2 class="text-4xl font-black text-stone-900 mb-10">关于我与承诺</h2>
+                        <h2 class="text-4xl font-black text-stone-900 mb-10"><br>关于我与承诺</h2>
                         <div class="space-y-8 text-stone-500 leading-relaxed">
                             <p>
                                 我所属于总部位于多伦多、成立于 1998 年的全国性保险服务网络。20 年的从业经验让我深知，在加拿大生活，一份合适的保险是安全感的基石。
