Replace <br> tags with line breaks in index.html

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
         <!-- SECTION 2: SERVICES -->
         <section id="services">
-            <div style="height: 3em;"></div>
+            <br>
             <div class="max-w-6xl mx-auto px-8">
                 <div class="text-center mb-24">
-                    <h2 class="text-4xl font-black text-stone-900 mb-6"><br>保险服务范畴</h2>
+                    <h2 class="text-4xl font-black text-stone-900 mb-6">保险服务范畴</h2>
                     <div class="w-12 h-0.5 bg-orange-800 mx-auto"></div>
                 </div>
 
@@ -106,10 +106,11 @@
 
         <!-- SECTION 3: ABOUT & CONTACT -->
         <section id="about">
+            <br>
             <div class="max-w-6xl mx-auto px-8">
                 <div class="grid lg:grid-cols-2 gap-24">
                     <div>
-                        <h2 class="text-4xl font-black text-stone-900 mb-10"><br>关于我与承诺</h2>
+                        <h2 class="text-4xl font-black text-stone-900 mb-10">关于我与承诺</h2>
                         <div class="space-y-8 text-stone-500 leading-relaxed">
                             <p>
                                 我所属于总部位于多伦多、成立于 1998 年的全国性保险服务网络。20 年的从业经验让我深知，在加拿大生活，一份合适的保险是安全感的基石。
