--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="max-w-6xl mx-auto px-8">
                 <div class="grid lg:grid-cols-2 gap-24">
                     <div>
-                        <h2 class="text-4xl font-black text-stone-900 mb-10"><br>关于我与承诺</h2>
+                        <h2 class="text-4xl font-black text-stone-900 mb-10"><br><br>关于我与承诺</h2>
                         <div class="space-y-8 text-stone-500 leading-relaxed">
                             <p>
                                 我所属于总部位于多伦多、成立于 1998 年的全国性保险服务网络。20 年的从业经验让我深知，在加拿大生活，一份合适的保险是安全感的基石。
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="flex flex-col items-center">
-                        <h3 class="text-xl font-bold text-stone-900 mb-10 tracking-widest uppercase">联系咨询</h3>
+                        <h3 class="text-xl font-bold text-stone-900 mb-10 tracking-widest uppercase"><br><br>联系咨询</h3>
                         
                         <!-- DOUBLED MAIN QR CODE -->
                         <div class="bg-white p-6 rounded-[3rem] shadow-sm border border-stone-100 mb-12">
