--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
 </head>
 <body class="selection:bg-orange-100 selection:text-orange-900">
-
     <main class="pt-24">
-        
         <!-- SECTION 1: HOME (Hero) -->
         <section id="home" class="hero-section">
             <div class="max-w-6xl mx-auto px-8 w-full">
@@ -66,8 +64,7 @@
         <section id="services">
             <div class="max-w-6xl mx-auto px-8">
                 <div class="text-center mb-24">
-                    <br>
-                    <h2 class="text-4xl font-black text-stone-900 mb-6">保险服务范畴</h2>
+                    <h2 class="text-4xl font-black text-stone-900 mb-6"><br>保险服务类型</h2>
                     <div class="w-12 h-0.5 bg-orange-800 mx-auto"></div>
                 </div>
 
